test-suite/tests/roundtrip/invalid/semantic/typecheck/comparison_expr_in_arith_list/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/comparison_expr_in_arith_list/input.essence:2:19:
  |
2 | such that sum([x, 2 >= 3, 5 - 10]) > 0
  |                   ^
Type error: 2 >= 3
	Exepected: int
	Got: comparison expression